cbc: updated overview illustration

--- a/js/template/widget/TestOverview.html
+++ b/js/template/widget/TestOverview.html
@@ -17,7 +17,7 @@
                 <div class="yui3-u-c">
                     <div class="column diagram-container">
                         <div class="inner">
-                            <img class="diagram" src="images/test/{{type}}/diagram-2x.png" />
+                            <img class="diagram" src="images/test/{{type}}/{{diagramFilename}}" />
                         </div>
                     </div>
                 </div>
