--- a/css-sass/view/test/_urine.scss
+++ b/css-sass/view/test/_urine.scss
@@ -121,6 +121,47 @@
         }
     }
 
+    .test-subsection.particle {
+        .pod {
+            background-color: white;
+            border: 1px solid #a3a3a3;
+            border-radius: 4px;
+            padding: 15px 20px 15px (20px + $widgetIndicatorWidth);
+
+            >.inner {
+                position: relative;
+
+                background-image: url("../images/subtest/select/bullet.png");
+                background-repeat: no-repeat;
+                background-position: 7px 6px;
+
+                padding-left: 20px;
+            }
+
+            .label {
+                @include secondaryFont;
+                font-size: 182%;
+                line-height: 100%;
+                font-weight: bold;
+
+                white-space: nowrap; 
+                text-overflow: ellipsis;
+                display: block;
+                width: 100%;
+                overflow: hidden;
+            }
+
+            .widget-indicator {
+                position: absolute;
+                top: -5px;
+                left: - $widgetIndicatorWidth;
+            }
+        }
+    }
+
+    .property.concentration {
+    }
+
     .property.ph {
     }
 }
