--- a/css/screen.css
+++ b/css/screen.css
@@ -3381,6 +3381,35 @@ span.placeholder {
   font-size: 77%;
   font-weight: bold;
 }
+.view-test-urine-analysis .test-subsection.particle .pod {
+  background-color: white;
+  border: 1px solid #a3a3a3;
+  border-radius: 4px;
+  padding: 15px 20px 15px 52px;
+}
+.view-test-urine-analysis .test-subsection.particle .pod > .inner {
+  position: relative;
+  background-image: url("../images/subtest/select/bullet.png");
+  background-repeat: no-repeat;
+  background-position: 7px 6px;
+  padding-left: 20px;
+}
+.view-test-urine-analysis .test-subsection.particle .pod .label {
+  font-family: 'Apercu', sans-serif;
+  font-size: 182%;
+  line-height: 100%;
+  font-weight: bold;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  display: block;
+  width: 100%;
+  overflow: hidden;
+}
+.view-test-urine-analysis .test-subsection.particle .pod .widget-indicator {
+  position: absolute;
+  top: -5px;
+  left: -32px;
+}
 
 .view-subtest-range {
   font-family: 'Apercu', sans-serif;
