--- a/js/template/subtest/TypesOfCell2.html
+++ b/js/template/subtest/TypesOfCell2.html
@@ -1,7 +1,7 @@
 <div class="view-subtest-types-of-cell2">
 
     <div class="yui3-g-r">
-        <div class="yui3-u-1-3">
+        <div class="yui3-u-1-3 yui3-u-1-2-small-tablet">
             <div class="yui3-u-c">
                 <div class="title">Infection Fighters</div>
 
@@ -23,7 +23,7 @@
             </div>
         </div>
 
-        <div class="yui3-u-1-3">
+        <div class="yui3-u-1-3 yui3-u-1-2-small-tablet">
             <div class="yui3-u-c">
                 <div class="title">Immune Defenders</div>
 
@@ -45,7 +45,7 @@
             </div>
         </div>
 
-        <div class="yui3-u-1-3">
+        <div class="yui3-u-1-3 yui3-u-1-2-small-tablet">
             <div class="yui3-u-c">
                 <div class="title">Allergen Watchmen</div>
 
