--- a/js/template/test/FelvFiv.html
+++ b/js/template/test/FelvFiv.html
@@ -4,15 +4,15 @@
         <div class="test-section-inner">
             <div class="yui3-g-r">
                 <!-- tests -->
-                <div class="yui3-u-1-2 yui3-u-1-small-tablet">
-                    <div class="yui3-g">
-                        <div class="yui3-u-1-2">
+                <div class="yui3-u-1">
+                    <div class="yui3-g-r">
+                        <div class="yui3-u-1-3 yui3-u-1-2-small-tablet yui3-u-1-2-phone">
                             <div class="yui3-u-c">
                                 <div class="boolean-container"></div>
                             </div>
                         </div>
 
-                        <div class="yui3-u-1-2">
+                        <div class="yui3-u-1-3 yui3-u-1-2-small-tablet yui3-u-1-2-phone">
                             <div class="yui3-u-c">
                                 <div class="boolean-container"></div>
                             </div>
