--- a/css-sass/view/widget/_test-overview.scss
+++ b/css-sass/view/widget/_test-overview.scss
@@ -39,5 +39,9 @@
                 display: block;
             }
         }
+
+        .description {
+            font-size: 153.9%;
+        }
     }
 }
