--- a/js/template/widget/TestSubsection.html
+++ b/js/template/widget/TestSubsection.html
@@ -1,11 +1,14 @@
 <div class="view-widget-test-subsection">
 
     <div class="header">
-        <span class="title"><span class="widget-arrow"></span> {{title}}</span>
+        <span class="title yui3-u-c">
+            <span class="widget-arrow"></span>
+            {{title}}
+        </span>
     </div>
 
     <div class="body">
-        <p class="text">{{text}}</p>
+        <p class="text title yui3-u-c">{{text}}</p>
         <div class="content"></div>
     </div>
 
