--- a/css-sass/view/test/_base.scss
+++ b/css-sass/view/test/_base.scss
@@ -28,6 +28,11 @@
 
     .test-section-inner-with-icon {
         padding: 30px 30px 30px 150px;
+
+        /* Phone */
+        @media (max-width:$mq-phone) {
+            padding: 0;
+        }
     }
 
 
@@ -43,6 +48,11 @@
             left: - image-width("images/test/cbc/diagram/rbc-2x.png") / 2 - 20px;
 
             width: image-width("images/test/cbc/diagram/rbc-2x.png") / 2;
+
+            /* Phone */
+            @media (max-width:$mq-phone) {
+                display: none;
+            }
         }
     }
 }
