--- a/css-sass/view/widget/_test-subsection.scss
+++ b/css-sass/view/widget/_test-subsection.scss
@@ -4,7 +4,12 @@
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
 
-    padding: 0 30px 0 170px;
+    padding: 0 30px 0 150px;
+
+    /* Phone */
+    @media (max-width:$mq-phone) {
+        padding: 0;
+    }
 
     >.header {
         @include secondaryFont;
@@ -20,8 +25,16 @@
 
         .widget-arrow {
             position: absolute;
-            top: 3px;
-            left: - $widgetArrowWidth - 20px;
+            top: 3px + 10px;
+            left: - $widgetArrowWidth - 10px;
+
+
+            /* Phone */
+            @media (max-width:$mq-phone) {
+                position: relative;
+                top: -3px;
+                left: auto;
+            }
         }
     }
 
